make body's z-index negative to fix broken empty stack clicking in konqueror

--- a/cards.css
+++ b/cards.css
@@ -13,6 +13,7 @@ body {
 	-moz-background-size: 100% 100%;
 	overflow: hidden;
 	font-family: helvetica, verdana, sans;
+	z-index: -100;
 }
 
 ul {
